# streamtool2

./: CMakeLists.txt  Makefile  Makefile.bak  README.md
arch/include/: riscv.h
compiler/: cerr.h  compiler.h  macrofunc.h  type.h
configs/: Makefile  SimulatorConfig.h.in  ncop.reg  regconfig.product  simu_defconfig
include/: compiler.h  config.h  interface.h  type.h  version.h
kernel/: Makefile  board.c  clock.c  common.c  power.c  poweron.c  powerup.c  product.c  simulator.c
kernel/board/: Makefile  chip.c  chiplink.c  ddr.c  fifo.c  maincpu.c  pcie.c
kernel/chip/: Makefile  core.c  noc.c
kernel/core/: Makefile  cp.c  mcu.c  ncp.c  np.c  ram.c  tcp.c  tp.c
kernel/include/: common.h  ctlp.h  ncop.h  noc.h  np.h  ram.h  tcop.h
kernel/product/: board.c  boardlink.c  clock.c  power.c
lib/: Makefile
lib/c2xlayer/: Makefile  c2xlayer.cpp  function.cpp
lib/cerr/: Makefile  cerr.c
lib/cmath/: Makefile  fp16.c
lib/debugger/: Makefile
lib/include/: c2xlayer.h  cerr.h  cmath.h  debugger.h  library.h  logger.h  math.h  midlayer.h  of.h
lib/logger/: Makefile  logger.c
lib/math/: Makefile
lib/midlayer/: Makefile  function.cpp  midlayer.cpp
lib/of/: Makefile  of.c  of_dt.c
libs/: CMakeLists.txt
libs/fp16/: CMakeLists.txt  fp16.c  fp16.h
libs/fp32/: CMakeLists.txt  fp32.c  fp32.h
libs/hash/: CMakeLists.txt  hashtable.c  hashtable.h
libs/mathfunc/: CMakeLists.txt  mathfunc.h  mysqrt.c
libs/memory/: CMakeLists.txt  cmemory.h
libs/of/: CMakeLists.txt  Makefile  of.h
libs/string/: CMakeLists.txt  cstring.c  cstring.h  string.c
scripts/: CMakeLists.txt
scripts/maketable/: CMakeLists.txt  maketable.c
simulator/: CMakeLists.txt  common.h  kernel.c  simulator.c
simulator/board/: chiplink.h  ddr_interface.h  pcie.c  pcie_interface.h
simulator/chip/: noc.c  noc_interface.h
simulator/client/: CMakeLists.txt
simulator/core/: mcu_interface.h  ncp_top.c  ncp_top.h
simulator/include/: cp.h  tp.h
simulator/kernel/: CMakeLists.txt  board_top.h  boardlink.h
simulator/kernel/board/: CMakeLists.txt  chip_top.c  chip_top.h  clock.c  clock.h  fifo_interface.h  maincpu_interface.h  power.c
simulator/kernel/board/chip/: CMakeLists.txt  core_top.h
simulator/kernel/board/chip/core/: CMakeLists.txt  ram_interface.h  tcp_top.h
simulator/kernel/board/chip/core/ncp/: CMakeLists.txt
simulator/kernel/board/chip/core/tcp/: CMakeLists.txt
simulator/product/: power.h
simulator/server/: CMakeLists.txt
test/: CMakeLists.txt  Makefile
test/autotest/: CMakeLists.txt  autotest.c
test/case/: Makefile
test/data/: Makefile
tools/: CMakeLists.txt  Makefile
tools/debugger/: CMakeLists.txt  Makefile  debugger.h
tools/include/: debugger.h
tools/logger/: CMakeLists.txt
